Fixe chat, overflow

--- a/src/App.css
+++ b/src/App.css
@@ -49,10 +49,6 @@ body {
 
 #root {
 	font-family: AmaticSC;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
 }
 
 h1,
