--- a/src/components/Home/homeStyles.module.css
+++ b/src/components/Home/homeStyles.module.css
@@ -23,7 +23,7 @@
 	letter-spacing: 1px;
 	border: 3px solid 052124;
 	transition: all 0.35s;
-	font-size: 24px;
+	font-size: min(3, 24px);
 	border-radius: 10px;
 }
 
